# formula_tela

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  CLAUDE.md  COMMIT_MESSAGE.txt  Dockerfile  FORMULA_TELA_AI_WORKFLOW.md  FORM_LAYOUT_FIX_PLAN.md  GIT_ADD_GUIDE.md  GIT_FLOW.md  MIGRATION_FIX_PLAN.md  Makefile  README.md  SERVICE_PAGE_DECOMPOSITION.md  SERVICE_PAGE_INTEGRATION_PLAN.md  STATIC_FILES_FIX_PLAN.md  TEST_FINAL.md  TEST_STAGING.md  TEST_WORKFLOW_FIXED.md  VERSTKA_FIX_PLAN.md  development-plan.md  docker-compose.yml  pytest.ini  repomix-output.xml  requirements.txt  ПЛАН_ДОБАВЛЕНИЯ_ИЗОБРАЖЕНИЙ_УСЛУГ.md  ПЛАН_ИЗМЕНЕНИЙ_ФОРМЫ_БРОНИРОВАНИЯ.md  ПЛАН_ИНТЕГРАЦИИ_ВЕРСТКИ.md
BeautyGo/: API_Spec_MVP.md  API_Spec_MVP_full.md  API_Spec_MVP_updated.md  Backlog.csv  BeautyGo_Roadmap_MVP.md  BeautyGo_Team_Reglament.md  MVP_Backlog_Prioritized.md  Product_Vision_MVP.md  _______________API___________.csv  beautygo-APIv1.1-1.0.2-oas3-resolved.yaml  beautygo-your-api-1.0.0-oas3-resolved.yaml  beautygo-your-api-1.0.1-oas3-resolved.yaml  beautygo_mvp_roadmap_full.csv  beautygo_openapi.json  beautygo_screens_list.csv  beautygo_user_stories_by_component.csv  openapi_mvp.yaml  swagger_auth_api.yaml  swagger_auth_api_updated.yaml  (+7 more)
services/formulatela_mcp/: README.md  pyproject.toml
services/formulatela_mcp/src/formulatela_mcp/: __init__.py  django_bootstrap.py  main.py
services/formulatela_mcp/src/formulatela_mcp/embeddings/: __init__.py  chroma_backend.py  reindex.py  store.py
services/formulatela_mcp/tests/: test_embeddings.py  test_main.py
(+391 files in other folders)
